<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Logins.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="25dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:src="@drawable/logo"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/createAccount"
                android:fontFamily="@font/teachers_semibold"
                android:textSize="22sp"
                android:textColor="@color/colorPrimary" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/createAccountNote"
                android:fontFamily="@font/teachers_semibold"
                android:textSize="12sp"
                android:textColor="@color/txtHeader"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/fullName"
                android:textColor="@color/text"
                android:fontFamily="@font/teachers_semibold"
                android:textSize="14sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/editbox_round">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/nameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:hint="@string/enterfullName"
                    android:fontFamily="@font/teachers_regular"
                    android:textColorHint="@color/hintcolor"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="@color/text"
                android:fontFamily="@font/teachers_semibold"
                android:textSize="14sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/editbox_round">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:hint="@string/enteremailaddress"
                    android:fontFamily="@font/teachers_regular"
                    android:textColorHint="@color/hintcolor"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/mobilenumber"
                android:textColor="@color/text"
                android:fontFamily="@font/teachers_semibold"
                android:textSize="14sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/editbox_round">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/mobileEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:hint="@string/entermobilenumber"
                    android:fontFamily="@font/teachers_regular"
                    android:textColorHint="@color/hintcolor"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="@color/text"
                android:fontFamily="@font/teachers_semibold"
                android:textSize="14sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/editbox_round">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/passwordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:hint="@string/enterpassword"
                    android:fontFamily="@font/teachers_regular"
                    android:textColorHint="@color/hintcolor"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/confirmpassword"
                android:textColor="@color/text"
                android:fontFamily="@font/teachers_semibold"
                android:textSize="14sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/editbox_round">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/CpasswordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:hint="@string/entercpassword"
                    android:fontFamily="@font/teachers_regular"
                    android:textColorHint="@color/hintcolor"
                    android:inputType="textPassword"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearSubmit"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_button">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/signup"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:fontFamily="@font/teachers_bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/alreadyhaveanaccount"
                    android:fontFamily="@font/teachers_semibold"
                    android:textColor="@color/text"
                    android:textSize="14sp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/teachers_bold"
                    android:text="@string/signin"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>