<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/edge_items_light_gray"
    android:elevation="2dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/teachers_semibold"
            android:text="@string/title"
            android:textColor="@color/txtHeader"
            android:textSize="15sp"
            android:singleLine="true"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/teachers_medium"
            android:text="@string/pincode"
            android:textColor="@color/txtHeader"
            android:textSize="15sp" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/teachers_medium"
            android:text="@string/address"
            android:textColor="@color/txtH"
            android:textSize="14sp" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/teachers_medium"
            android:text="@string/mobilenumber"
            android:textColor="@color/txtH"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/txtEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/edit_ic"
                app:tint="@color/txtHeader"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Edit"
                android:textAllCaps="false"
                android:textColor="@color/txtHeader"
                android:textSize="14sp"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/lightGray"/>
        <LinearLayout
            android:id="@+id/txtDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/delete_ic"
                app:tint="@color/txtHeader"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/txtHeader"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>