<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bottom_topup_round"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="25dp"
        android:layout_height="2.5dp"
        app:cardBackgroundColor="@color/gray"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15sp"
        app:cardCornerRadius="25dp"
        app:cardElevation="1dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/remove_account"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteAccount"
            android:fontFamily="@font/teachers_semibold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/deletenote"
        android:fontFamily="@font/teachers_regular"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:background="@drawable/round_cancel_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonOk"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textAllCaps="false"
            android:background="@drawable/round_button"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/proceed" />
    </LinearLayout>

</LinearLayout>
